Fixed: Carousel overflow

--- a/css/app.css
+++ b/css/app.css
@@ -45,9 +45,9 @@ a.navbar-item:hover {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-    -ms-flex-direction: row-reverse;
-    flex-direction: row-reverse;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
     width: 100%;
   }
 }
